fixed garant button mobile bug

--- a/css/garant.css
+++ b/css/garant.css
@@ -336,7 +336,6 @@ margin-bottom: 50px;
 
     .garant__submit {
         font-size: 10px;
-        left: calc(50% - 65px);
         border-width: 3px;
         padding: 10px;
         bottom: 15px;
